file name update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./list.png" type="image/x-icon">
     <style>
         body {
-            background-color: aqua;
+            background-color: lightblue;
             font-size: 24px;
         }
 
